<resources>
    <string name="app_name">Eloth</string>
    <string name="welcome">welcome</string>
    <string name="login">login</string>
    <string name="login_btn">登陆</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="phoneLimit">（仅支持中国大陆地区手机号）</string>
    <string name="passwordHint">请输入密码，不小于6位</string>
    <string name="phoneHint">请输入你的手机号</string>
    <string name="usernameHint">请输入用户名,不小于4位</string>
    <string name="signup">注册</string>
    <string name="signup_image">signUp image</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">我的衣橱</string>
    <string name="title_notifications">个人中心</string>
    <string name="about_home">这里是首页</string>
    <string name="net_error">网络异常，请检查网络重试</string>
    <string name="server_error">服务器异常，请稍后重试或向开发者反馈</string>
    <string name="default_show_list">类型：短袖\t\t颜色：黑色\n大小：XXL</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myWardrobe">我的衣橱</string>
    <string name="settings">设置</string>
    <string name="bug">BUG反馈</string>
    <string name="myScore">我的积分</string>
    <string name="wearRecard">穿搭记录</string>
    <string name="personalInfo">个人信息</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_common_settings">通用</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
