<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#dbdbdb"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UserFragment">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/user_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/PERSONINFO_BTN"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/person_info"
            android:drawableRight="@drawable/in_right"
            android:drawablePadding="30dp"
            android:text="@string/personalInfo"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/RECORD_BTN"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/record"
            android:drawableRight="@drawable/in_right"
            android:drawablePadding="30dp"
            android:text="@string/wearRecard"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PERSONINFO_BTN" />

        <Button
            android:id="@+id/SCORE_BTN"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/user_btn_border"
            android:drawableLeft="@drawable/score"
            android:drawableRight="@drawable/in_right"
            android:drawablePadding="30dp"
            android:text="@string/myScore"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RECORD_BTN" />

        <Button
            android:id="@+id/BUGREPORT_BTN"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/bug"
            android:drawableRight="@drawable/in_right"
            android:drawablePadding="30dp"
            android:text="@string/bug"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SETTINGS_BTN" />

        <Button
            android:id="@+id/SETTINGS_BTN"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/setting"
            android:drawableRight="@drawable/in_right"
            android:drawablePadding="30dp"
            android:text="@string/settings"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SCORE_BTN" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
